--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "async": "^1.4.2",
     "cheerio": "^0.19.0",
     "fs-extra": "^0.24.0",
+    "node-unzip-2": "^0.2.1",
     "request": "^2.61.0"
   }
 }
