--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^0.19.0",
     "fs-extra": "^0.24.0",
     "node-unzip-2": "^0.2.1",
+    "pyspreadsheet": "^0.1.4",
     "request": "^2.61.0"
   }
 }
