--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "ctgen",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "download and generate db for ctbook",
   "main": "./lib/main.js",
+  "bin": {
+    "ctgen": "./bin/ctgen.js"
+  },
   "scripts": {
-    "test": "mocha test/*.js"
+    "test": "mocha test/*.js",
+    "patch-release": "npm version patch && npm publish && git push --follow-tags"
   },
   "author": "spaceshiplabs.com",
   "license": "MIT",
@@ -17,9 +21,11 @@
   "dependencies": {
     "async": "^1.4.2",
     "cheerio": "^0.19.0",
+    "commander": "^2.8.1",
     "fs-extra": "^0.24.0",
     "node-unzip-2": "^0.2.1",
     "pyspreadsheet": "^0.1.4",
-    "request": "^2.61.0"
+    "request": "^2.61.0",
+    "shelljs": "^0.5.3"
   }
 }
