--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^0.19.0",
     "commander": "^2.8.1",
     "fs-extra": "^0.24.0",
+    "moment": "^2.10.6",
     "node-unzip-2": "^0.2.1",
     "pyspreadsheet": "^0.1.4",
     "request": "^2.61.0",
