--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "author": "spaceshiplabs.com",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/spaceship-labs/ctgen.git"
+  },
   "devDependencies": {
     "mocha": "^2.3.0",
     "mockery": "^1.4.0",
