--- a/.jshintrc
+++ b/.jshintrc
@@ -56,6 +56,11 @@
 
     "globals": {
         "angular": false,
-        "$": false
+        "$": false,
+        "describe": true,
+        "it": true,
+        "beforeEach": true,
+        "before": true,
+        "after": true
     }
 }
